add some more stuff

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,10 @@
 p {
   margin-top: 20px;
 }
+
+button {
+  background-image: url("https://previews.123rf.com/images/songglod/songglod1706/songglod170600011/81699725-rough-orange-blue-abstract-watercolor-background.jpg");
+  background-repeat: no-repeat;
+  font-family: "Cousine", monospace;
+  margin-top: 10px;
+}
